creates user and tests

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,9 +14,11 @@
   <!-- include source files here... -->
   <script src='src/DiscogsApiCall.js'></script>
   <script src="src/Beatroute.js"></script>
+  <script src="src/user.js"></script>
   <script src='interface.js'></script>
 
-  <!-- include spec files here... -->
+  <!-- include spec files here -->
+  <script src="spec/userSpec.js"></script>
   <script src='spec/DiscogsApiCallSpec.js'></script>
   <script src='spec/demoData.js'></script>
 
