--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
     <option value="Indonesia">Indonesia</option>
     <option value="Philippines">Philippines</option>
   </select>
-  <button type="button" id="displayTitle">Get Song</button>
-  <span id="song-title" ></span>
 
-
+    <script src="src/user.js"></script>
     <script src="src/Beatroute.js"></script>
     <script type="text/javascript" src="interface.js"></script>
     <script src="src/DiscogsApiCall.js"></script>
